@@ -207,8 +207,16 @@ class SolrBaseQueryTests extends DrupalWebTestCase {
       '#name' => 'field_date',
       '#value' => '[1970-12-31T23:59:59Z TO NOW]',
     );
+
     $query = new SolrBaseQuery("apachesolr_tests", new DummySolr());
     foreach ($examples as $fq => $example) {
+      $name = (!empty($example['#name'])) ? $example['#name'] : '_QUERY_';
+      $value = (!empty($example['#value'])) ? $example['#value'] : '_VALUE_';
+      $filter = $name . ':' . $value;
+      // Check if filter is seen as a valid one
+      $message = t('Filter (@fq) is Valid', array('@fq' => $filter));
+      $this->assertTrue($query->validFilterValue($filter), $message);
+
       $query->addParam('fq', $fq);
       // Check if filter was added
       $message = t('hasFilter(@name, @value) is True', array('@name' => $example['#name'], '@value' => $example['#value']));
@@ -224,5 +232,35 @@ class SolrBaseQueryTests extends DrupalWebTestCase {
       $query->removeParam('fq');
       // Check the ones without the name also
     }
+
+    // Check for invalid combinations
+    $bad_examples['wrong name:"double words"'] = array(
+      '#local' => NULL,
+      '#exclude' => FALSE,
+      '#name' => 'wrong name',
+      '#value' => '"double words"',
+    );
+    $bad_examples['field_date:[1970-12-31 TO NOW]'] = array(
+      '#local' => NULL,
+      '#exclude' => FALSE,
+      '#name' => 'field_date',
+      '#value' => '[1970-12-31 TO NOW]',
+    );
+    $bad_examples['bundle:((article OR page)]'] = array(
+      '#local' => NULL,
+      '#exclude' => FALSE,
+      '#name' => 'bundle',
+      '#value' => '((article OR page)]',
+    );
+
+    foreach ($bad_examples as $fq => $example) {
+      $name = (!empty($example['#name'])) ? $example['#name'] : '_QUERY_';
+      $value = (!empty($example['#value'])) ? $example['#value'] : '_VALUE_';
+      $filter = $name . ':' . $value;
+      // Check if filter is seen as a valid one
+      $message = t('Filter (@fq) is not Valid', array('@fq' => $filter));
+      $this->assertFalse($query->validFilterValue($filter), $message);
+    }
+
   }
 }
