@@ -1,5 +1,6 @@
 Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
 ------------------------------
+#370855 by Damien Tournoud, Nick_vh: Add configuration option to a search page if we allow user input using the url or not.
 #1392940 by Nick_vh | pwolanin: Create a 3.x solrconfig.xml that sets luceneMatchVersion.
 #1031250 by EugenMayer, Nick_vh: Added an option to index as another user instead of only anonymous.
 #1388498 by Nick_vh | pwolanin: Remove s (sortable) fields from schema.xml.
